--- a/sites/all/themes/auge-theme/sass/partials/components/panels/_pages.scss
+++ b/sites/all/themes/auge-theme/sass/partials/components/panels/_pages.scss
@@ -10,7 +10,11 @@
   display: inline;
 }
 //Format for all titles and descriptions.
-
+.main-content{
+  .menu{
+    display:block;
+  }
+}
 .page-title,
 #page-title {
   font-size:2.4rem;
@@ -230,6 +234,7 @@
 //Newest activity views
 .view-display-id-panel_pane_4{
   background-color: #eb7a50;
+  border-radius: 7px;
   span, a{
     color: white;
     font-size: 1.8rem;
@@ -255,5 +260,6 @@
   .views-field-view-node{
     display: inline-block;
     vertical-align: middle;
+    border-radius: 7px;
   }
 }
